--- a/src/components/extras/Contacto.astro
+++ b/src/components/extras/Contacto.astro
@@ -5,8 +5,10 @@ import DatosContacto from "@components/extras/DatosContacto.astro";
 
 <div id="contacto" class="pt-24">
   <Container>
-    <h2 class="text-4xl font-bold mb-4">¡Manténgamonos en contacto!</h2>
-    <div class="grid grid-cols-1 xl:grid-cols-9 gap-8 pb-24">
+    <h2 class="mb-4 font-bold text-4xl lg:text-left text-center">
+      ¡Manténgamonos en contacto!
+    </h2>
+    <div class="gap-8 grid grid-cols-1 xl:grid-cols-9 pb-24">
       <div class="col-span-1 xl:col-span-3 xl:col-start-2">
         <DatosContacto />
       </div>
@@ -19,7 +21,7 @@ import DatosContacto from "@components/extras/DatosContacto.astro";
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
-          class="rounded-md shadow-xl"></iframe>
+          class="shadow-xl rounded-md"></iframe>
       </div>
     </div>
   </Container>
