--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,4 +31,21 @@ h4,
 h5,
 h6 {
   font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+  line-height: 2rem;
+}
+
+h1 {
+  font-size: 2.8rem;
+  line-height: 1;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
 }
