--- a/src/components/Buscador.astro
+++ b/src/components/Buscador.astro
@@ -2,7 +2,7 @@
 import { cursos } from "@lib/cursos";
 ---
 
-<div class="ml-5" id="segmento-buscar">
+<div id="segmento-buscar" class="lg:ml-4">
   <div>
     <div>
       <div class="z-2 w-full">
@@ -14,7 +14,7 @@ import { cursos } from "@lib/cursos";
       </div>
     </div>
     <div>
-      <label class="z-3 rounded-md w-96 input">
+      <label class="z-3 rounded-md w-full lg:w-96 input">
         <svg
           class="opacity-50 h-[1em]"
           xmlns="http://www.w3.org/2000/svg"
