Arreglos menos para subida

--- a/src/components/BuscadorMobile.astro
+++ b/src/components/BuscadorMobile.astro
@@ -51,7 +51,7 @@ const mostrar = [
     </div>
   </div>
   <div>
-    <ul id="buscadorMobile" class="gap-2 mt-5 list">
+    <ul id="buscadorMobile" class="gap-2 my-5 list">
       <li><h3 class="font-bold text-2xl">Cursos Recomendados</h3></li>
       {
         mostrar.map((mt) => {
