--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -68,10 +68,10 @@ import Container from "@layouts/Container.astro";
   </Container>
 </div>
 
-<div class="fab">
+<div class="fab" id="btn-social">
   <div
     class="tooltip-left tooltip tooltip-open tooltip-primary"
-    data-tip="Escríbenos!"
+    data-tip="Hola! Escríbenos aquí -->"
   >
     <a
       href="https://wa.me/56944871048?text=Hola%20me%20gustaría%20contactarme"
