--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,7 @@
 ---
 import Container from "@layouts/Container.astro";
-import { menu, menuMobile } from "@lib/menu.ts";
+import { menu, menuMobile } from "@lib/menu";
 import Buscador from "@components/Buscador.astro";
-import BuscadorMobile from "@components/BuscadorMobile.astro";
 import Menu from "./icons/Menu.astro";
 import WhatsappBl from "./icons/WhatsappBl.astro";
 import Instagram from "./icons/Instagram.astro";
@@ -119,7 +118,7 @@ import Buscar from "./icons/Buscar.astro";
         <a
           href="https://aulavirtualcenakin.com"
           class="bg-sky-600 hover:bg-sky-800 border-none rounded-md text-white hover:text-white uppercase transition-colors btn btn-primary btn-sm"
-          >Aula Virtual</a
+          target="_blank">Aula Virtual</a
         >
       </div>
     </Container>
