--- a/src/components/HeaderCurso.astro
+++ b/src/components/HeaderCurso.astro
@@ -5,10 +5,10 @@ import Buscador from "@components/Buscador.astro";
 ---
 
 <div>
-  <div class="navbar fixed w-full top-0 z-10 bg-base-100 shadow-md">
+  <div class="top-0 z-10 fixed bg-base-100 shadow-md w-full navbar">
     <Container className="flex">
       <div class="navbar-start">
-        <a href="/" class="text-xl hidden lg:block">
+        <a href="/" class="hidden lg:block text-xl">
           <img src="/images/banner_ng.svg" alt="Logo Cenakin" class="w-30" />
         </a>
         <div class="hidden lg:block">
@@ -16,7 +16,7 @@ import Buscador from "@components/Buscador.astro";
         </div>
         <button
           onclick="history.back()"
-          class="btn btn-ghost rounded-md lg:hidden bg-slate-200"
+          class="lg:hidden bg-slate-200 rounded-md btn btn-ghost"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -28,7 +28,7 @@ import Buscador from "@components/Buscador.astro";
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="feather feather-arrow-left"
+            class="feather-arrow-left feather"
           >
             <line x1="19" y1="12" x2="5" y2="12"></line>
             <polyline points="12 19 5 12 12 5"></polyline>
@@ -42,7 +42,7 @@ import Buscador from "@components/Buscador.astro";
               <li>
                 <a
                   href={item.href}
-                  class="btn btn-ghost rounded-md uppercase hover:bg-sky-600 hover:text-white transition-colors"
+                  class="hover:bg-sky-600 rounded-md hover:text-white uppercase transition-colors btn btn-ghost"
                 >
                   {item.name}
                 </a>
@@ -52,8 +52,8 @@ import Buscador from "@components/Buscador.astro";
         </ul>
         <a
           href="https://aulavirtualcenakin.com"
-          class="border-none btn btn-primary rounded-md uppercase bg-sky-600 text-white hover:bg-sky-800 hover:text-white transition-colors"
-          >Aula Virtual</a
+          class="bg-sky-600 hover:bg-sky-800 border-none rounded-md text-white hover:text-white uppercase transition-colors btn btn-primary"
+          target="_blank">Aula Virtual</a
         >
       </div>
     </Container>
