--- a/src/components/extras/Inscripcion.astro
+++ b/src/components/extras/Inscripcion.astro
@@ -11,6 +11,12 @@ const { clases } = Astro.props;
 </form>
 <dialog id="my_modal_1" class={`${clases} modal`}>
   <div class="rounded-md w-full max-w-xl modal-box">
+    <form method="dialog">
+      <button
+        class="top-2 right-2 absolute font-bold text-2xl btn btn-sm btn-circle btn-ghost"
+        >✕</button
+      >
+    </form>
     <div class="grid grid-cols-1 lg:grid-cols-3 card">
       <figure class="col-span-1">
         <img src="/images/logo.png" alt="Logo Cenakin" class="h-48" />
