--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,7 +72,12 @@ const { title, description, url, image, keywords } = Astro.props
   </head>
   <body class="bg-white">
     <Header />
-    <main class="mt-16" id="main">
+    <div
+      class="flex justify-center items-center bg-red-600 mt-15 p-3 lg:p-0 w-full lg:h-12 font-bold text-white text-center"
+    >
+      Lanzamiento de nuevo diseño de la página web 14 de enero 2026
+    </div>
+    <main id="main">
       <slot />
     </main>
     <Footer />
