Agregado codigo de clarify

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,6 +43,7 @@ const { title, description, url, image, keywords } = Astro.props
     />
     <script src="/js/pixel.js" is:inline></script>
     <script src="/js/google.js" is:inline></script>
+    <script src="/js/clarity.js" is:inline></script>
     <noscript
       ><img
         height="1"
