--- a/src/layouts/LayoutCurso.astro
+++ b/src/layouts/LayoutCurso.astro
@@ -46,6 +46,8 @@ const { precio, id } = Astro.props as {
       rel="stylesheet"
     />
     <script src="/js/pixel.js" is:inline></script>
+    <script src="/js/google.js" is:inline></script>
+    <script src="/js/clarity.js" is:inline></script>
     <noscript
       ><img
         height="1"
