feat: Add favicon, refactor inscription form functionality and display, and adjust page layouts.

--- a/src/components/extras/Inscripcion.astro
+++ b/src/components/extras/Inscripcion.astro
@@ -1,5 +1,5 @@
 ---
-// import { cursos } from "@lib/cursos";
+import { cursos } from "@lib/cursos";
 
 const { clases } = Astro.props;
 ---
@@ -28,7 +28,7 @@ const { clases } = Astro.props;
           próximas capacitaciones y ofertas.
         </p>
         <div class="justify-end">
-          <form class="gap-2 grid grid-cols-1">
+          <form class="gap-2 grid grid-cols-1" id="formSuscription">
             <input
               type="text"
               id="name"
@@ -43,14 +43,6 @@ const { clases } = Astro.props;
               class="col-span-1 rounded-md w-full input"
               required
             />
-            <!-- <select name="curso" id="curso" class="select">
-              <option value="">Curso de Interés</option>
-              {
-                cursos.map((curso) => (
-                  <option value={curso.name}>{curso.name}</option>
-                ))
-              }
-            </select> -->
             <input
               type="text"
               placeholder="Ingrese su teléfono"
@@ -59,6 +51,14 @@ const { clases } = Astro.props;
               class="col-span-1 rounded-md w-full input"
               required
             />
+            <select name="curso" id="curso" class="w-full select">
+              <option value="">Curso de Interés</option>
+              {
+                cursos.map((curso) => (
+                  <option value={curso.name}>{curso.name}</option>
+                ))
+              }
+            </select>
             <button
               id="submit"
               class="col-span-1 bg-celeste rounded-md text-white uppercase btn"
@@ -85,45 +85,74 @@ const { clases } = Astro.props;
   </div>
 </dialog>
 
-<script>
-  const form = document.querySelector("form");
+<script is:inline>
+  const form = document.getElementById("formSuscription");
   const success = document.getElementById("success");
   const error = document.getElementById("error");
   const submit = document.getElementById("submit");
-  const name = document.getElementById("name");
-  const email = document.getElementById("email");
-  const curso = document.getElementById("curso");
+  const nameInput = document.getElementById("name");
+  const emailInput = document.getElementById("email");
+  const cursoInput = document.getElementById("curso");
+  const phoneInput = document.getElementById("telefono");
+  const modal = document.getElementById("my_modal_1");
 
-  submit.addEventListener("click", (e) => {
+  setTimeout(() => {
+    modal.showModal();
+  }, 2000);
+
+  submit.addEventListener("click", async (e) => {
     e.preventDefault();
-    if (name && email) {
-      success.classList.remove("hidden");
-      error.classList.add("hidden");
-      fetch("https://cenakin.cl/otec/correo.php", {
+
+    if (
+      !nameInput.value ||
+      !emailInput.value ||
+      !phoneInput.value ||
+      !cursoInput.value
+    ) {
+      success.classList.add("hidden");
+      error.classList.remove("hidden");
+      return;
+    }
+
+    try {
+      const response = await fetch("https://cenakin.cl/otec/correo.php", {
         method: "POST",
-        nombre: name,
-        correo: email,
-        curso: curso || "Sin curso elegido.",
-      }).then((res) => {
-        if (res.ok) {
-          success.classList.remove("hidden");
-          error.classList.add("hidden");
-          form.reset();
-          setTimeout(() => {
-            modal.close();
-          }, 2000);
-        } else {
-          success.classList.add("hidden");
-          error.classList.remove("hidden");
-        }
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          nombre: nameInput.value.trim(),
+          correo: emailInput.value.trim(),
+          telefono: phoneInput.value.trim(),
+          curso: cursoInput.value.trim(),
+        }),
       });
-      form.reset();
-      setTimeout(() => {
-        modal.close();
-      }, 2000);
-    } else {
+
+      const result = await response.json();
+
+      if (response.ok && result.error === false) {
+        success.classList.remove("hidden");
+        error.classList.add("hidden");
+        form.reset();
+
+        setTimeout(() => {
+          modal.close();
+        }, 2000);
+      } else {
+        throw new Error(result.message || "Error");
+      }
+    } catch (err) {
+      console.error(err);
       success.classList.add("hidden");
       error.classList.remove("hidden");
     }
   });
 </script>
+
+<style>
+  #my_modal_1 {
+    option {
+      width: 10px;
+    }
+  }
+</style>
