--- a/src/components/extras/Contacto.astro
+++ b/src/components/extras/Contacto.astro
@@ -5,7 +5,7 @@ import DatosContacto from "@components/extras/DatosContacto.astro";
 
 <div id="contacto" class="pt-24">
   <Container>
-    <h2 class="mb-4 font-bold text-4xl lg:text-left text-center">
+    <h2 class="pb-10 font-bold text-4xl lg:text-left text-center">
       ¡Manténgamonos en contacto!
     </h2>
     <div class="gap-8 grid grid-cols-1 xl:grid-cols-9 pb-24">
