--- a/src/components/extras/Info.astro
+++ b/src/components/extras/Info.astro
@@ -4,7 +4,7 @@ import Container from "@layouts/Container.astro";
 
 <Container>
   <div class="py-24" id="info">
-    <h2 class="mb-4 font-bold text-5xl">Nuestras Acreditaciones</h2>
+    <h2 class="pb-10 font-bold text-5xl">Nuestras Acreditaciones</h2>
     <div
       class="flex md:flex-row flex-col md:justify-center items-center gap-8 md:gap-32"
     >
