feat: Improve UI consistency with larger, centered headings, enhance slider with navigation and new content, and integrate responsive inscription modal.

--- a/src/components/extras/Faq.astro
+++ b/src/components/extras/Faq.astro
@@ -41,7 +41,7 @@ const dudas = [
 
 <div class="bg-neutral-100 py-24" id="faq">
   <Container>
-    <h2 class="text-5xl font-bold pb-10">Preguntas Frecuentes</h2>
+    <h2 class="text-6xl font-bold pb-10 text-center">Preguntas Frecuentes</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-2">
       <div class="col-span-1">
         <div
