--- a/src/components/inicio/Formaciones.astro
+++ b/src/components/inicio/Formaciones.astro
@@ -39,7 +39,7 @@ const formaciones = [
 
 <Container>
   <div id="formaciones" class="pb-24">
-    <h2 class="text-5xl font-bold pb-10">Nuestras Formaciones</h2>
+    <h2 class="text-6xl font-bold pb-10 text-center">Nuestras Formaciones</h2>
     <ul
       class="my-2 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-2 xl:gap-4"
     >
