feat: Enhance category titles for clarity and refactor the main slider to use a dynamic image array.

--- a/src/components/inicio/CabeceraSlider.astro
+++ b/src/components/inicio/CabeceraSlider.astro
@@ -6,26 +6,88 @@ import {
   SwiperButtonPrev,
   SwiperButtonNext,
 } from "astro-swiper";
+
+const images = [
+  {
+    grande: "https://cenakin.cl/images/portada/slider/1_1264.webp",
+    mediano: "https://cenakin.cl/images/portada/slider/1_960.webp",
+    pequeno: "https://cenakin.cl/images/portada/slider/1_600.webp",
+    alt: "Portada Cenakin",
+    href: "",
+  },
+  {
+    grande: "https://cenakin.cl/images/portada/slider/2_1264.webp",
+    mediano: "https://cenakin.cl/images/portada/slider/2_960.webp",
+    pequeno: "https://cenakin.cl/images/portada/slider/2_600.webp",
+    alt: "Portada Cenakin 2",
+    href: "https://cenakin.cl/categorias/",
+  },
+  {
+    grande: "https://cenakin.cl/images/portada/slider/3_1264.webp",
+    mediano: "https://cenakin.cl/images/portada/slider/3_960.webp",
+    pequeno: "https://cenakin.cl/images/portada/slider/3_600.webp",
+    alt: "Portada Cenakin 3",
+    href: "https://wa.link/32f2b6",
+  },
+  {
+    grande: "https://cenakin.cl/images/portada/slider/4_1264.webp",
+    mediano: "https://cenakin.cl/images/portada/slider/4_960.webp",
+    pequeno: "https://cenakin.cl/images/portada/slider/4_600.webp",
+    alt: "Portada Cenakin 4",
+    href: "",
+  },
+  {
+    grande: "https://cenakin.cl/images/portada/slider/5_1264.webp",
+    mediano: "https://cenakin.cl/images/portada/slider/5_960.webp",
+    pequeno: "https://cenakin.cl/images/portada/slider/5_600.webp",
+    alt: "Portada Cenakin 5",
+    href: "",
+  },
+];
 ---
 
-<Swiper
-  options={{
-    // check options at https://swiperjs.com/swiper-api
-    autoplay: {
-      delay: 5000,
-      disableOnInteraction: false,
-      waitForTransition: false,
-    },
-    navigation: {
-      nextEl: ".swiper-button-next",
-      prevEl: ".swiper-button-prev",
-    },
-    loop: true,
-  }}
->
-  <SwiperWrapper>
-    <!-- Slides -->
-    <SwiperSlide>
+<div class="mt-15">
+  <Swiper
+    options={{
+      // check options at https://swiperjs.com/swiper-api
+      autoplay: {
+        delay: 5000,
+        disableOnInteraction: false,
+        waitForTransition: false,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+      loop: true,
+    }}
+  >
+    <SwiperWrapper>
+      <!-- Slides -->
+      {
+        images.map((image) => (
+          <SwiperSlide>
+            <a href={image.href}>
+              <picture>
+                <source
+                  srcset={image.grande}
+                  media="(min-width: 1024px)"
+                  type="image/webp"
+                  height="100%"
+                />
+                <source
+                  srcset={image.mediano}
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                  height="100%"
+                />
+                <img src={image.pequeno} alt={image.alt} height="100%" />
+              </picture>
+            </a>
+          </SwiperSlide>
+        ))
+      }
+      <!-- <SwiperSlide>
       <a href="https://cenakin.cl/cursos/diplomado-masoterapia/">
         <picture>
           <source
@@ -93,11 +155,12 @@ import {
           />
         </picture>
       </a>
-    </SwiperSlide>
-  </SwiperWrapper>
-  <SwiperButtonPrev />
-  <SwiperButtonNext />
-</Swiper>
+    </SwiperSlide> -->
+    </SwiperWrapper>
+    <SwiperButtonPrev />
+    <SwiperButtonNext />
+  </Swiper>
+</div>
 
 <style>
   img {
