--- a/src/components/inicio/CabeceraSlider.astro
+++ b/src/components/inicio/CabeceraSlider.astro
@@ -9,38 +9,52 @@ import {
 
 const images = [
   {
+    grande: "https://cenakin.cl/images/cursos-online/1_1264.webp",
+    mediano: "https://cenakin.cl/images/cursos-online/1_960.webp",
+    pequeno: "https://cenakin.cl/images/cursos-online/1_600.webp",
+    alt: "Portada Cenakin",
+    href: "https://cenakin.cl/cursos/curso-online-masaje-relajante-y-descontracturante/",
+  },
+  {
+    grande: "https://cenakin.cl/images/inscripcion-anticipada/1_1264.webp",
+    mediano: "https://cenakin.cl/images/inscripcion-anticipada/1_960.webp",
+    pequeno: "https://cenakin.cl/images/inscripcion-anticipada/1_600.webp",
+    alt: "Portada Cenakin 2",
+    href: "https://wa.link/32f2b6",
+  },
+  {
     grande: "https://cenakin.cl/images/portada/slider/1_1264.webp",
     mediano: "https://cenakin.cl/images/portada/slider/1_960.webp",
     pequeno: "https://cenakin.cl/images/portada/slider/1_600.webp",
-    alt: "Portada Cenakin",
+    alt: "Portada Cenakin 3",
     href: "",
   },
   {
     grande: "https://cenakin.cl/images/portada/slider/2_1264.webp",
     mediano: "https://cenakin.cl/images/portada/slider/2_960.webp",
     pequeno: "https://cenakin.cl/images/portada/slider/2_600.webp",
-    alt: "Portada Cenakin 2",
+    alt: "Portada Cenakin 4",
     href: "https://cenakin.cl/categorias/",
   },
   {
     grande: "https://cenakin.cl/images/portada/slider/3_1264.webp",
     mediano: "https://cenakin.cl/images/portada/slider/3_960.webp",
     pequeno: "https://cenakin.cl/images/portada/slider/3_600.webp",
-    alt: "Portada Cenakin 3",
+    alt: "Portada Cenakin 5",
     href: "https://wa.link/32f2b6",
   },
   {
     grande: "https://cenakin.cl/images/portada/slider/4_1264.webp",
     mediano: "https://cenakin.cl/images/portada/slider/4_960.webp",
     pequeno: "https://cenakin.cl/images/portada/slider/4_600.webp",
-    alt: "Portada Cenakin 4",
+    alt: "Portada Cenakin 6",
     href: "",
   },
   {
     grande: "https://cenakin.cl/images/portada/slider/5_1264.webp",
     mediano: "https://cenakin.cl/images/portada/slider/5_960.webp",
     pequeno: "https://cenakin.cl/images/portada/slider/5_600.webp",
-    alt: "Portada Cenakin 5",
+    alt: "Portada Cenakin 7",
     href: "",
   },
 ];
@@ -87,29 +101,7 @@ const images = [
           </SwiperSlide>
         ))
       }
-      <!-- <SwiperSlide>
-      <a href="https://cenakin.cl/cursos/diplomado-masoterapia/">
-        <picture>
-          <source
-            srcset="https://cenakin.cl/images/portada/1_1264.webp"
-            media="(min-width: 1024px)"
-            type="image/webp"
-            height="100%"
-          />
-          <source
-            srcset="https://cenakin.cl/images/portada/1_960.webp"
-            media="(min-width: 768px)"
-            type="image/webp"
-            height="100%"
-          />
-          <img
-            src="https://cenakin.cl/images/portada/1_600.webp"
-            alt="Portada Cenakin"
-            height="100%"
-          />
-        </picture>
-      </a>
-    </SwiperSlide>
+      <!-- 
     <SwiperSlide>
       <a href="/cursos/curso-online-masaje-relajante-y-descontracturante/">
         <picture>
