--- a/src/pages/categorias/index.astro
+++ b/src/pages/categorias/index.astro
@@ -30,7 +30,7 @@ const seo: Seo = {
           salud && salud.length > 0 && (
             <div class="mt-10">
               <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
-                Área de la Salud: Cursos para profesionales de Salud
+                Cursos para profesionales de Salud
               </h2>
               <ul class="gap-4 grid grid-cols-1 lg:grid-cols-2 list">
                 {salud.map((curso: any) => {
@@ -52,7 +52,7 @@ const seo: Seo = {
           marketing && marketing.length > 0 && (
             <div class="mt-10">
               <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
-                Área de la Marketing: Cursos de Emprendimiento y Marketing
+                Cursos de Emprendimiento y Marketing
               </h2>
               <ul class="gap-4 grid grid-cols-1 lg:grid-cols-2 list">
                 {marketing.map((curso: any) => {
@@ -74,7 +74,7 @@ const seo: Seo = {
           online && online.length > 0 && (
             <div class="mt-10">
               <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
-                Área de Cursos Online: Cursos y Formaciones Online
+                Cursos y Formaciones Online
               </h2>
               <ul class="gap-4 grid grid-cols-1 lg:grid-cols-2 list">
                 {online.map((curso: any) => {
