Modificacion titulo de categorias

--- a/src/components/categorias/Header.astro
+++ b/src/components/categorias/Header.astro
@@ -2,9 +2,9 @@
 const { titulo } = Astro.props;
 ---
 
-<div class="hero bg-sky-600 h-24 rounded-md my-4">
+<div class="hero bg-sky-600 h-24 rounded-md">
   <div class="hero-content text-center">
-    <div class="max-w-2xl">
+    <div class="max-w-2xl flex">
       <h1 class="text-5xl font-bold text-white">{titulo}</h1>
     </div>
   </div>
