--- a/src/components/categorias/Masoterapia.astro
+++ b/src/components/categorias/Masoterapia.astro
@@ -45,7 +45,7 @@ const categorias = [
 
 <div class="lg:mb-0">
   <h2 class="mt-8 mb-2 font-bold text-sky-600 text-lg lg:text-3xl uppercase">
-    Diplomados en masoterapía
+    Diplomados en masoterapia
   </h2>
   <div>
     <ul class="gap-4 grid grid-cols-1 lg:grid-cols-2 list">
