--- a/src/pages/categorias/[slug].astro
+++ b/src/pages/categorias/[slug].astro
@@ -48,7 +48,7 @@ switch (categoria.slug) {
 
 <Layout dataPag={seo}>
   <Container>
-    <div class="mb-20 lg:mb-4">
+    <div class="my-20 lg:mb-4">
       <Header titulo={categoria.name} descripcion={categoria.descripcion} />
       <h1 class="mt-8 mb-4 font-bold text-5xl">Nuestros Cursos</h1>
       {
