--- a/src/pages/categorias/index.astro
+++ b/src/pages/categorias/index.astro
@@ -18,7 +18,7 @@ const seo: Seo = {
 
 <Layout dataPag={seo}>
   <Container>
-    <div class="mb-20 lg:mb-4">
+    <div class="my-20 lg:mb-4">
       <h1 class="mt-8 mb-4 font-bold text-5xl">Nuestros Cursos</h1>
       {
         masoterapia && masoterapia.length > 0 && (
